--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,21 +38,19 @@ services:
     container_name: tomcat
     ports:
       - "8080:8080"
-      # optional debug port, uncomment if you want to attach a remote debugger:
-      # - "8000:8000"
     volumes:
-      # Preferred: mount the built WAR (run `mvn package` to create target/cinehub.war)
       - ./target/cinehub.war:/usr/local/tomcat/webapps/ROOT.war:ro
-      # Alternative (hot-deploy, faster iteration): mount exploded webapp folder
-      # - ./target/cinehub/:/usr/local/tomcat/webapps/ROOT:rw
-      # Optional: mount logs to make catalina.out available on host
       - ./logs:/usr/local/tomcat/logs
     depends_on:
       mysql-db:
         condition: service_healthy
-    # If you want remote debug, add CATALINA_OPTS environment (uncomment next line)
-    # environment:
-    #   - CATALINA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000
+    environment:
+      JDBC_URL: "jdbc:mysql://mysql-db:3306/cinehub?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC"
+      JDBC_USERNAME: "cinehub"
+      JDBC_PASSWORD: "cinehubpass"
+      HIKARI_MAX_POOL_SIZE: "10"
+      HIKARI_MIN_IDLE: "2"
+      HIBERNATE_DDL_AUTO: "update"
     restart: unless-stopped
 
 volumes:
