--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,18 @@
         </dependency>
 
         <!-- Spring Data JPA -->
+        <!-- replace the existing Spring Data JPA dependency with this -->
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>3.1.5</version>
+            <version>3.2.2</version>
+        </dependency>
+
+        <!-- optional: explicitly pin spring-data-commons to the matching version -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.2.2</version>
         </dependency>
 
         <!-- Hibernate / JPA -->
@@ -140,6 +148,9 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
